Fix prompt sidebar overflow issue

--- a/src/components/ui/Loaders/ElementOrLoader/style.module.css
+++ b/src/components/ui/Loaders/ElementOrLoader/style.module.css
@@ -2,4 +2,6 @@
     margin: auto;
     width: 100%;
     height: 100%;
+    min-height: 0;
+    min-width: 0;
 }
