--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+    overscroll-behavior: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +10,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: var(--background-color);
-  /*overflow-y: clip;*/
 }
 
 code {
