--- a/src/pages/ChatPage/components/PromptsLibrary/style.module.css
+++ b/src/pages/ChatPage/components/PromptsLibrary/style.module.css
@@ -1,11 +1,9 @@
 .prompt-library-container {
     display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
     padding: 1rem 0 1rem 0;
     height: 100%;
-    flex-direction: column;
-    overflow-y: scroll;
-    scrollbar-width: thin;
-    scrollbar-color: var(--background-color-active) transparent;
 }
 
 .prompt-library-container h2 {
@@ -20,8 +18,21 @@
     padding: 0;
     margin: 1rem 0 1rem 0;
 }
-.prompt-library-records-list {
+.prompt-library-records-list-container {
+    height: 100%;
+    box-sizing: border-box;
+    padding: 0.5rem;
+    overflow-y: hidden;
+}
 
+.prompt-library-records-list {
+    display: flex;
+    height: 100%;
+    box-sizing: border-box;
+    flex-direction: column;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: var(--background-color-active) transparent;
 }
 
 .no-prompts-message {
